--- a/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
@@ -217,9 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4733,7 +4731,7 @@
     "    print(\"Tile {}:\".format(tile.split('/')[-1]))\n",
     "    best_catalogue = Table.read(tile)\n",
     "    \n",
-    "    best_catalogue = main_help_sample(best_catalogue)\n",
+    "    #best_catalogue = main_help_sample(best_catalogue)\n",
     "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
     "          | (best_catalogue['flag_optnir_det'] == 7))\n",
     "    \n",
@@ -5815,7 +5813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
