testing js json access

--- a/dmu31/dmu31_HiPS/1_Make_CIGALE_objects.ipynb
+++ b/dmu31/dmu31_HiPS/1_Make_CIGALE_objects.ipynb
@@ -31,6 +31,7 @@
     "from astropy.table import Table, Column, vstack, join\n",
     "\n",
     "from herschelhelp_internal.utils import inMoc, gen_help_id\n",
+    "from herschelhelp.utils import clean_table\n",
     "\n",
     "from pymoc import MOC"
    ]
@@ -226,30 +227,7 @@
     }
    ],
    "source": [
-    "def clean_table(table):\n",
-    "    \"\"\"Take a table produced by a VO query and remove all empty columns\n",
-    "    \n",
-    "    Often many columns are empty and make the tables hard to read\n",
-    "    \n",
-    "    Inputs\n",
-    "    =======\n",
-    "    table\n",
-    "    \n",
-    "    Returns\n",
-    "    =======\n",
-    "    table\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    table = table.copy()\n",
-    "    for col in table.colnames:\n",
-    "        if np.all(table[col].mask):\n",
-    "            table.remove_column(col)\n",
-    "    for col in table.colnames:\n",
-    "        if table[col].dtype == 'object':\n",
-    "            print(col, table[col].dtype )\n",
-    "        \n",
-    "            table[col] = table[col].astype(str)\n",
-    "    return table\n",
+    "\n",
     "cigale_objects = clean_table(cigale_objects)"
    ]
   },
