--- a/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = '20190201'\n",
+    "SUFFIX = '20190701'\n",
     "master_catalogue = Table.read(\"../../dmu32/dmu32_Bootes/data/Bootes_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue.remove_column(\"redshift\")\n",
-    "best_catalogue[\"zspec\"].name = \"redshift\""
+    "#best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -191,7 +191,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [
@@ -300,7 +299,88 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/Bootes_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/Bootes_cigale_best_extcor_{}.fits\".format(SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All optnir objects with photoz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue[optnir].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Number of optnir sources with z-phot: {}\".format(len(best_catalogue)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertion to CIGALE format\n",
+    "os.environ['LOG_LEVEL'] = 'INFO'\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)\n",
+    "remove_unneeded_fluxes(j_bands)\n",
+    "remove_unneeded_fluxes(h_bands)\n",
+    "remove_unneeded_fluxes(k_bands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue.write(\"data_tmp/Bootes_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -470,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
