--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-04-25 16:36:29.639339\n"
+      "2019-07-02 18:47:06.113380\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap'}\n",
+      "{'flag_irac_i3_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i1_ap'}\n",
       "Column f_ap_lbc_u has missing data\n",
       "Column ferr_ap_lbc_u has missing data\n",
       "Column m_ap_lbc_u has missing data\n",
@@ -443,7 +443,7 @@
     "    bands = list(set(bands_tot) | set(bands_ap))\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
@@ -649,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
