--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "from astropy.table import Table\n",
+    "from astropy.table import Table, Column\n",
     "\n",
     "from herschelhelp.utils import position_to_field\n",
     "from herschelhelp_internal.utils import coords_to_hpidx"
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "desi.add_column(Column(\n",
-    "    data=coords_to_hpidx(desi['ra'], desi['dec'], order=13),\n",
+    "    data=coords_to_hpidx(desi['RA'], desi['DEC'], order=13),\n",
     "    name=\"hp_idx\"\n",
     "))"
    ]
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "desi.add_column(Column(\n",
-    "    data=position_to_field(desi['ra'], desi['dec']),\n",
+    "    data=position_to_field(desi['RA'], desi['DEC'], dmu_loc='../../'),\n",
     "    name=\"field\"\n",
     "))"
    ]
