--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-07-08 13:12:05.996967\n"
+      "2019-07-10 17:52:24.554060\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i4_ap', 'flag_irac_i1_ap', 'flag_irac_i3_ap', 'flag_irac_i2_ap'}\n",
+      "{'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap'}\n",
       "Column f_ap_lbc_u has missing data\n",
       "Column ferr_ap_lbc_u has missing data\n",
       "Column m_ap_lbc_u has missing data\n",
@@ -485,7 +485,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_Bootes/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_Bootes/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -617,12 +617,24 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "set()\n",
+      "{'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap'}\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    print(set(columns) == set(merged_table.colnames))\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
+    "    print(set(merged_table.colnames) - set(columns))"
    ]
   },
   {
@@ -638,7 +650,38 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column f_ap_lbc_u has missing data\n",
+      "Column ferr_ap_lbc_u has missing data\n",
+      "Column m_ap_lbc_u has missing data\n",
+      "Column merr_ap_lbc_u has missing data\n",
+      "Column f_lbc_u has missing data\n",
+      "Column ferr_lbc_u has missing data\n",
+      "Column m_lbc_u has missing data\n",
+      "Column merr_lbc_u has missing data\n",
+      "Column f_ap_lbc_y has missing data\n",
+      "Column ferr_ap_lbc_y has missing data\n",
+      "Column m_ap_lbc_y has missing data\n",
+      "Column merr_ap_lbc_y has missing data\n",
+      "Column f_lbc_y has missing data\n",
+      "Column ferr_lbc_y has missing data\n",
+      "Column m_lbc_y has missing data\n",
+      "Column merr_lbc_y has missing data\n",
+      "Column flag_irac_i1_ap has missing data\n",
+      "Column flag_irac_i2_ap has missing data\n",
+      "Column flag_irac_i3_ap has missing data\n",
+      "Column flag_irac_i4_ap has missing data\n",
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
@@ -664,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
