DESI taking too long trying to use smaller table

--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -65,8 +65,8 @@
     "#./data/dr6dr7_photoz_csp_totcat.fits omode=out out=./data/dr6dr7_reduced.fits\n",
     "full_tab='./data/dr6dr7_photoz_csp_totcat.fits'\n",
     "small_tab='./data/dr6dr7_reduced.fits'\n",
-    "#desi = Table.read(small_tab)['ID', 'RA', 'DEC', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi = Table.read(full_tab)"
+    "desi = Table.read(small_tab)['ID', 'RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
+    "#desi = Table.read(full_tab)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "#cols = ['field', 'desi_id', 'ra', 'dec', 'hp_idx', 'redshift', 'redshift_err', 'zspec']\n",
     "#cols = ['field', 'ID', 'RA', 'DEC', 'hp_idx', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi.write('./data/desi_for_vo.csv', overwrite = True)"
+    "desi.write('./data/desi_for_vo.fits', overwrite = True)"
    ]
   }
  ],
