DESI taking too long trying to use smaller table

--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -101,6 +101,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "desi.add_column(Column(\n",
     "    data=position_to_field(desi['RA'], desi['DEC'], dmu_loc='../../'),\n",
     "    name=\"field\"\n",
@@ -115,7 +124,7 @@
    "source": [
     "#cols = ['field', 'desi_id', 'ra', 'dec', 'hp_idx', 'redshift', 'redshift_err', 'zspec']\n",
     "#cols = ['field', 'ID', 'RA', 'DEC', 'hp_idx', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi.write('./data/desi_for_vo.fits', overwrite = True)"
+    "desi.write('./data/desi_for_vo_2.fits', overwrite = True)"
    ]
   }
  ],
