--- a/dmu31/dmu31_Examples/Shirley_et_al_figures/1_Number_counts.ipynb
+++ b/dmu31/dmu31_Examples/Shirley_et_al_figures/1_Number_counts.ipynb
@@ -812,7 +812,25 @@
       "Querying VOX for isaac_k mags on HDF-N\n",
       "COMPLETED\n",
       "Band isaac_k field HDF-N done in 11 seconds with 0 objects\n",
-      "Querying VOX for isaac_k mags on Herschel-Stripe-82\n"
+      "Querying VOX for isaac_k mags on Herschel-Stripe-82\n",
+      "COMPLETED\n",
+      "Band isaac_k field Herschel-Stripe-82 done in 198 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on Lockman-SWIRE\n",
+      "COMPLETED\n",
+      "Band isaac_k field Lockman-SWIRE done in 12 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on HATLAS-NGP\n",
+      "COMPLETED\n",
+      "Band isaac_k field HATLAS-NGP done in 11 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on SA13\n",
+      "COMPLETED\n",
+      "Band isaac_k field SA13 done in 11 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on HATLAS-SGP\n",
+      "COMPLETED\n",
+      "Band isaac_k field HATLAS-SGP done in 115 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on SPIRE-NEP\n",
+      "COMPLETED\n",
+      "Band isaac_k field SPIRE-NEP done in 11 seconds with 0 objects\n",
+      "Querying VOX for isaac_k mags on SSDF\n"
      ]
     }
    ],
