Work on masterlist figures
What are good literature sources for number counts

--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -20,26 +20,16 @@
     "\n",
     "The HELP field and hp_idx are made in this notebook.\n",
     "\n",
-    "We later decided it would be advantageous to include all columns"
+    "We later decided it would be advantageous to include all columns.\n",
+    "\n",
+    "The file is too big to load it all into data so you must first make a column cut with just RA and DEC and then join in the result using stilts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'pos_to_field'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-c61a0d95f62b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mastropy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtable\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mherschelhelp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpos_to_field\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'pos_to_field'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
     "\n",
@@ -51,7 +41,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Make csv file with corrects columns"
+    "## 1. Make csv file with correct columns\n",
+    "\n",
+    "The stilts join assumes ordering maintained so be sure no operations here sort the columns in any way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"stilts tpipe cmd='keepcols \\\"RA DEC\\\"' dr6dr7_photoz_csp_totcat.fits omode=out out=dr6dr7_reduced.fits\")"
    ]
   },
   {
@@ -65,7 +66,7 @@
     "#./data/dr6dr7_photoz_csp_totcat.fits omode=out out=./data/dr6dr7_reduced.fits\n",
     "full_tab='./data/dr6dr7_photoz_csp_totcat.fits'\n",
     "small_tab='./data/dr6dr7_reduced.fits'\n",
-    "desi = Table.read(small_tab)['ID', 'RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
+    "desi = Table.read(small_tab)['RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
     "#desi = Table.read(full_tab)"
    ]
   },
@@ -101,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
+    "#desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
    ]
   },
   {
@@ -124,8 +125,26 @@
    "source": [
     "#cols = ['field', 'desi_id', 'ra', 'dec', 'hp_idx', 'redshift', 'redshift_err', 'zspec']\n",
     "#cols = ['field', 'ID', 'RA', 'DEC', 'hp_idx', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi.write('./data/desi_for_vo_2.fits', overwrite = True)"
+    "desi.write('./data/desi_for_vo_sub.fits', overwrite = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"stilts tpipe cmd='keepcols \\\"field hp_idx\\\"' desi_for_vo_2.fits omode=out out=desi_for_vo.fits\")\n",
+    "print(\"stilts tjoin nin=2 in1=dr6dr7_photoz_csp_totcat.fits in2=desi_for_vo_sub.fits out=desi_for_vo.fits\")\n",
+    "print(\"stilts tpipe desi_for_vo.fits omode=out ofmt=csv out=desi_for_vo.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
