DESI photozs processed

--- a/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
+++ b/dmu0/dmu0_DESI/1_Make_VO_tables.ipynb
@@ -20,14 +20,12 @@
     "\n",
     "The HELP field and hp_idx are made in this notebook.\n",
     "\n",
-    "We later decided it would be advantageous to include all columns.\n",
-    "\n",
-    "The file is too big to load it all into data so you must first make a column cut with just RA and DEC and then join in the result using stilts."
+    "We later decided it would be advantageous to include all columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,23 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Make csv file with correct columns\n",
-    "\n",
-    "The stilts join assumes ordering maintained so be sure no operations here sort the columns in any way."
+    "## 1. Make csv file with corrects columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"stilts tpipe cmd='keepcols \\\"RA DEC\\\"' dr6dr7_photoz_csp_totcat.fits omode=out out=dr6dr7_reduced.fits\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +53,13 @@
     "#./data/dr6dr7_photoz_csp_totcat.fits omode=out out=./data/dr6dr7_reduced.fits\n",
     "full_tab='./data/dr6dr7_photoz_csp_totcat.fits'\n",
     "small_tab='./data/dr6dr7_reduced.fits'\n",
-    "desi = Table.read(small_tab)['RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
+    "desi = Table.read(small_tab)['ID', 'RA', 'DEC'] #, 'photo_z', 'photo_zerr', 'spec_z']\n",
     "#desi = Table.read(full_tab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
+    "desi.write('./data/desi_for_vo_1.fits', overwrite = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,32 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#cols = ['field', 'desi_id', 'ra', 'dec', 'hp_idx', 'redshift', 'redshift_err', 'zspec']\n",
     "#cols = ['field', 'ID', 'RA', 'DEC', 'hp_idx', 'photo_z', 'photo_zerr', 'spec_z']\n",
-    "desi.write('./data/desi_for_vo_sub.fits', overwrite = True)"
+    "desi.write('./data/desi_for_vo_2.fits', overwrite = True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"stilts tpipe cmd='keepcols \\\"field hp_idx\\\"' desi_for_vo_2.fits omode=out out=desi_for_vo.fits\")\n",
-    "print(\"stilts tjoin nin=2 in1=dr6dr7_photoz_csp_totcat.fits in2=desi_for_vo_sub.fits out=desi_for_vo.fits\")\n",
-    "print(\"stilts tpipe desi_for_vo.fits omode=out ofmt=csv out=desi_for_vo.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
