Make CIGALe input on NGP

--- a/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_NGP/CIGALE_catalogue_preparation.ipynb
@@ -79,12 +79,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -134,6 +134,95 @@
    "metadata": {},
    "source": [
     "# Main catalogue for CIGALE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue[combined_good].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertion to CIGALE format\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Band selection\n",
+    "\n",
+    "We want to use only one filter for similar bands. We define an order of preference and set to NaN the flux in the lower prefered bands when a prefered band is available. Some band may have a 0 flux, we set there values to NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u_bands = [          ]\n",
+    "g_bands = [\"90prime_g\",           \"gpc1_g\"]\n",
+    "r_bands = [\"90prime_r\",           \"gpc1_r\"]\n",
+    "i_bands = [                       \"gpc1_i\"]\n",
+    "z_bands = [\"mosaic_z\", \"decam_z\", \"gpc1_z\"]\n",
+    "y_bands = [                       \"gpc1_y\"]\n",
+    "\n",
+    "def remove_unneeded_fluxes(list_of_bands):\n",
+    "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
+    "        mask = ~np.isnan(best_catalogue[band])\n",
+    "        for lower_band in list_of_bands[band_idx+1:]:\n",
+    "            best_catalogue[lower_band][mask] = np.nan\n",
+    "            best_catalogue[\"{}_err\".format(lower_band)][mask] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catalogue.write(\"data_tmp/NGP_cigale_best_extcor_{}.fits\".format(SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OPTNIR selection for Ldust prediction "
    ]
   },
   {
@@ -239,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/NGP_cigale_optnir_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/NGP_cigale_optnir_extcor_{}.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -382,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
