--- a/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_NGP/NGP_catalogue_merging.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NGP - Merging HELP data products\n",
+    "# HATLAS-NGP - Merging HELP data products\n",
     "\n",
-    "This notebook merges the various HELP data products on NGP.\n",
+    "This notebook merges the various HELP data products on HATLAS-NGP.\n",
     "\n",
     "It is first used to create a catalogue that will be used for SED fitting by CIGALE by merging the optical master list, the photo-z and the XID+ far infrared fluxes.  Then, this notebook is used to incorporate the CIGALE physical parameter estimations and generate the final HELP data product on the field."
    ]
@@ -21,7 +21,8 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True"
+    "MAKE_CIGALE_INPUT = True\n",
+    "MAKE_FINAL = True"
    ]
   },
   {
@@ -363,7 +364,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_INPUT:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands_tot = [col[2:] for col in merged_table.colnames\n",
@@ -412,32 +413,41 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_NGP/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_NGP/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
+    "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
-    "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    # UPDATE - we no longer do this and instead provide the chi2 values \n",
+    "    #flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "    #flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    #flag_cigale = (\n",
+    "    #    (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
+    "    #         <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    #    flag_cigale_opt & flag_cigale_ir)\n",
+    "    #flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
     "\n",
-    "    cigale.add_columns([\n",
-    "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
-    "                     dtype=int, fill_value=-1),\n",
-    "        MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
-    "                     dtype=int, fill_value=-1)\n",
-    "    ])\n",
-    "\n",
+    "    #cigale.add_columns([\n",
+    "    #    MaskedColumn(flag_cigale, \"flag_cigale\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", \n",
+    "    #                 dtype=int, fill_value=-1),\n",
+    "    #    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", \n",
+    "    #                 dtype=int, fill_value=-1)\n",
+    "    #])\n",
+    "    \n",
+    "    #UPDATE Instead of flags above we include all cols used to make \n",
+    "    #deprecated flags\n",
+    "    cigale[\"UVoptIR_OPTchi2\"].name                 =  \"cigale_chi2_opt\"\n",
+    "    cigale[\"UVoptIR_IRchi2\"].name                  =  \"cigale_chi2_ir\"\n",
+    "    cigale[\"UVoptIR_best.reduced_chi_square\"].name =  \"cigale_chi2_red\"\n",
+    "    cigale[\"IRonly_IRchi2\"].name                   =  \"cigale_chi2_ironly\"\n",
+    "    \n",
     "    cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
     "    cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
     "    cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
@@ -450,8 +460,11 @@
     "    cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
     "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
     "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
-    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
-    "                    'flag_cigale_ironly']"
+    "                    #Old flags\n",
+    "                    #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                    #New chi2 values\n",
+    "                    \"cigale_chi2_opt\", \"cigale_chi2_ir\", \"cigale_chi2_red\", \"cigale_chi2_ironly\"\n",
+    "                   ]"
    ]
   },
   {
@@ -462,7 +475,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -492,7 +505,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -507,7 +520,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -519,8 +532,12 @@
     "                columns.append(colname)\n",
     "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
     "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
+    "                'cigale_dustlumin_ironly_err', \n",
+    "                #Old flags\n",
+    "                #'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly'\n",
+    "                #New chi2 values\n",
+    "                'cigale_chi2_opt', 'cigale_chi2_ir', 'cigale_chi2_red', 'cigale_chi2_ironly',\n",
+    "                'stellarity', \n",
     "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
     "                'zspec_association_flag']"
@@ -534,7 +551,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)"
@@ -555,10 +572,10 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/HATLAS-NGP.fits\")"
    ]
   }
  ],
@@ -578,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
