Fix HATLAS field naming issue

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -476,7 +476,7 @@
     "    xid_objects = 0\n",
     "    photoz_objects = 0\n",
     "    cigale_objects = 0\n",
-    "    dmu32_info = yaml.load(open('./dmu32_{}/meta_main.yml'.format(field['name']), 'r'))\n",
+    "    dmu32_info = yaml.load(open('./dmu32_{}/meta_main.yml'.format(field['name'].replace(\"HATLAS-\", \"\")), 'r'))\n",
     "\n",
     "        \n",
     "    try: \n",
@@ -485,20 +485,20 @@
     "            xid_objects = len(Table.read(xid_file.replace('dmu_products', '..')))\n",
     "            print(\"  - xid: {}\".format(dmu32_info['xid'][n]))\n",
     "    except FileNotFoundError:\n",
-    "        print(\"  - xid not done.\".format(field['name']))\n",
+    "        print(\"  - xid not done.\")\n",
     "        \n",
     "    try: \n",
     "        #print(dmu32_info['photoz'].replace('dmu_products', '..'))\n",
     "        photoz_objects = len(Table.read(dmu32_info['photoz'].replace('dmu_products', '..')))\n",
     "        print(\"  - photoz: {}\".format(dmu32_info['photoz']))\n",
     "    except FileNotFoundError:\n",
-    "        print(\"  - photoz not done.\".format(field['name']))\n",
+    "        print(\"  - photoz not done.\")\n",
     "        \n",
     "    try: \n",
     "        cigale_objects = len(Table.read(dmu32_info['cigale'].replace('dmu_products', '..')))\n",
     "        print(\"  - cigale: {}\".format(dmu32_info['cigale']))\n",
     "    except FileNotFoundError:\n",
-    "        print(\"  - cigale not done.\".format(field['name']))\n",
+    "        print(\"  - cigale not done.\")\n",
     " \n",
     "                   \n",
     "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects\n",
@@ -651,6 +651,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python (herschelhelp_internal)",
    "language": "python",
